# Seminar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  upload_model.py
artifacts/: prokct2_extracted.txt  prokct2_extracted_review.txt
artifacts/agent_metrics/: metrics.json
artifacts/agent_traces/: trace_07fb8124-fc13-472b-ad50-4a701fcc2d4b_20260618_084820.json  trace_0ddb2e18-473a-4c2e-b3c8-eeca47a1ef5c_20260618_083826.json  trace_137fb674-ff15-4b3e-93ad-986dc48cbe86_20260618_084532.json  trace_22871db6-452d-44b5-aa43-d895c1ded5c5_20260618_083732.json  trace_22b01994-1b25-4767-945d-b746166a5d7f_20260618_084722.json  (+77 more)
artifacts/evaluation/: confusion_matrix.csv  metrics.json  (+1 more)
configs/: dataset.yaml  evaluation.yaml  explainability.yaml  model.yaml  monitoring.yaml  retrieval.yaml  training.yaml
docs/: DAY6_RETRIEVAL_HARDENING_REPORT.md  DEPLOY_ONE_PAGE.md  api_reference.md  architecture_overview.md  continual_learning.md  defense_questions.md  demo_checklist.md  demo_script.md  deployment_guide.md  ethics_impact_statement.md  executive_summary.md  final_checklist.md  privacy_analysis.md  project_structure.md  robustness_analysis.md
frontend/: agent_result_view.py  api_client.py  app.py  config.py  evidence_view.py  explanation_view.py  requirements.txt  trust_score_view.py
report/: Final_Report.tex
scripts/: debug_torch_environment.py  generate_report_summary.py  smoke_demo_claims.py
slides/: final_slides.tex
tests/: test_demo_claims.py  test_smoke.py
(+179 files in other folders)
