[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-misinformation-detection"
version = "0.1.0"
description = "Fake News & Misinformation Detection System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115,<1",
	"uvicorn[standard]>=0.30,<1",
	"streamlit>=1.37,<2",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"httpx",
	"ruff",
	"black",
	"mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
